DD-2059: smoke test with configurable custom metadata (#62)
* comment not null means true
* test without custom metadata blocks
* configurable metadata
* allow json outside resource dir
* a not yet tested API
* moved dataset related test from AdminTest to DatasetTest
* direct API calls for smoketest, fixed model
* cleanup